@@ -9,7 +9,7 @@ requires = "vaapi"
 video_extensions = [".mkv", ".mp4", ".ts", ".mov", ".webm", ".avi", ".mts", ".m2ts", ".m4v"]
 video_dimension_divisor = 8
 
-ref = importlib.resources.files("fastflix") / f"data/encoders/icon_rav1e.png"
+ref = importlib.resources.files("fastflix") / f"data/encoders/icon_vaapi.png"
 with importlib.resources.as_file(ref) as icon_file:
     icon = str(icon_file.resolve())
 
